--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,7 +4,6 @@ html {
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  background: $dark-blue;
   font-size: $m-size;
 }
 
@@ -14,4 +13,8 @@ button {
 
 button:disabled {
   cursor: default;
+}
+
+.is-active {
+	font-weight: bold;
 }
