--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,7 +6,10 @@ $light-blue: #464b5e;
 $off-white: #a5afd7;
 $red: #a85041;
 $purple: #8357c5;
+$header-backgound: #d4efa5;
+
 // Spacing
+
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
