--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -15,3 +15,8 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $desktop-breakpoint: 45rem;
+
+// button
+
+$btn-width: 100px;
+$btn-height: 40px;
