--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
 @import './base/_settings.scss';
 @import './base/_base.scss';
-@import './components/_header.scss';
+@import './components/header.scss';
+@import './components/login.scss';
