--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,20 +1,23 @@
 // Colors
 $off-black: #20222b;
-$dark-blue: #333745;
-$blue: #3c4251;
-$light-blue: #464b5e;
-$off-white: #a5afd7;
-$red: #a85041;
-$purple: #8357c5;
-$header-backgound: #d4efa5;
+$dark-grey: #333333;
+$off-green: #c0ed992b;
+$light-green: #2b8c2b;
+$dark-green:#1e651e;;
+$light-blue:  #add8e6;
+$light-red: #f7dcdc;
+$delete-red: #d87171;
 
 // Spacing
-
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
+$s-size: 0.7rem;
+$m-size: 1.2rem;
+$l-size: 2.0rem;
+$app-spacing: 5rem;
 $desktop-breakpoint: 45rem;
+
+//Font sizes
+$font-size: 1.7rem;
+$title-size: 2.4rem;
 
 // button
 
